; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mscc/extr_ocelot.c_ocelot_mc_sync.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mscc/extr_ocelot.c_ocelot_mc_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ocelot_port = type { i32, i32 }

@PGID_CPU = common dso_local global i32 0, align 4
@ENTRYTYPE_LOCKED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i8*)* @ocelot_mc_sync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ocelot_mc_sync(%struct.net_device* %0, i8* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ocelot_port*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call %struct.ocelot_port* @netdev_priv(%struct.net_device* %6)
  store %struct.ocelot_port* %7, %struct.ocelot_port** %5, align 8
  %8 = load %struct.ocelot_port*, %struct.ocelot_port** %5, align 8
  %9 = getelementptr inbounds %struct.ocelot_port, %struct.ocelot_port* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @PGID_CPU, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = load %struct.ocelot_port*, %struct.ocelot_port** %5, align 8
  %14 = getelementptr inbounds %struct.ocelot_port, %struct.ocelot_port* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @ENTRYTYPE_LOCKED, align 4
  %17 = call i32 @ocelot_mact_learn(i32 %10, i32 %11, i8* %12, i32 %15, i32 %16)
  ret i32 %17
}

declare dso_local %struct.ocelot_port* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @ocelot_mact_learn(i32, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
